src/components/goats.module.css
.container {
	background-image: url('../images/goats-bg.jpg');
	padding-top: 120px;
	grid-row-gap: 2.5rem;
}

.goat {
	border-top: 8px solid #4C2851;
	background-color: #fff;
	text-align: left;
}

.photo {
	margin-bottom: 0;
	display: inline-block;
	width: 33%;
	max-width: 380px;
	vertical-align: middle;
}

.content {
	display: inline-block;
	padding: 34px 34px 0 34px;
	text-align: left;
	vertical-align: top;
}

.list {
	list-style-type: none;
	margin: 0;
}

.listItem {
	margin-bottom: 0;
}

.bodyContent {
	padding-left: 34px;
	padding-right: 34px;
	margin-top: 1rem;
}

.bodyContent + .bodyContent {
	margin-top: 0;
}

